--- a/index.html
+++ b/index.html
@@ -687,7 +687,7 @@
     </div>
     </div>
 
-    <!-- <div class="testimonials">
+    <div class="testimonials">
         <div class="main">
         <div class="main-top">
         <div class="main-left">
@@ -2277,7 +2277,7 @@
                 </defs>
                 </svg>     
         </div>
-    </footer> -->
+    </footer>
 
 
 
